Add handler to move list
