# internal/module/lists/dto.go
@@ -6,6 +6,7 @@ const (
 	LISTS_FETCH_FAILED string = "failed to fetch lists"
 	LIST_CREATE_FAILED string = "failed to create list"
 	LIST_UPDATE_FAILED string = "failed to update list"
+	LIST_MOVE_FAILED   string = "failed to move list"
 	LIST_DELETE_FAILED string = "failed to delete list"
 )
 
@@ -16,6 +17,10 @@ type CreateListRequest struct {
 
 type UpdateListRequest struct {
 	Name string `json:"name" validate:"required,min=1,max=255"`
+}
+
+type MoveListRequest struct {
+	Position int32 `json:"position" validate:"required,min=0"`
 }
 
 type ListResponse struct {
